--- a/webapp/view/home/game.phtml
+++ b/webapp/view/home/game.phtml
@@ -4,6 +4,7 @@ use ArmoredCore\WebObjects\Layout;
 use ArmoredCore\WebObjects\URL;
 
 Layout::includeLayout('LayoutHeader')?>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
 </script>
 <script src="my_jquery_functions.js">
@@ -69,31 +70,45 @@ Layout::includeLayout('LayoutHeader')?>
 		if($action == 'stand') {
 			$_SESSION['game']->playDealer();
 		}
-	
+	echo'<div id="all_cards">';	
+	echo'<div id="dealer_cards_container">';
 	echo "Dealer Cards:<br>";
 	foreach($_SESSION['game']->Cards['Dealer'] as $card)
 	echo "
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card\" width=\"180\" height=\"232\" />
 	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card1\" width=\"180\" height=\"232\" />	";
 	echo "<br>Dealer Score: ".$_SESSION['game']->Scores['Dealer'];
-
-	echo "<br><br> <br> Player Cards:<br>";
+	echo '</div>';
+	
+	echo "<span> <br>Player Cards:</span><br>";	
+	
 	foreach($_SESSION['game']->Cards['Player'] as $card) 
-	echo "
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />
-	<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card3\" width=\"180\" height=\"232\" />
-	";
+	
+	echo '<div class="container"';
+	echo '<span>';
+	echo "<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card2\" width=\"180\" height=\"232\" />";
+	echo '</span>';
+	echo '<span>';
+	echo "<img src=\"http://localhost/BlackJack/public/img/Cards/$rand_card3\" width=\"180\" height=\"232\" />";
+	echo '</span>';
+	echo '<div id="player_cards_container">';echo '</div>';
+	
+	
+	echo '</div>	';
+
+	echo "Player Score: ".$_SESSION['game']->Scores['Player'];
+	
 ?>
 
-	<div id="player_cards_container">
-	<button id="button"  data-role="button">Click on button</button>
-	</div>      
+
+	
+	     
 <?php
-	echo "<br>Player Score: ".$_SESSION['game']->Scores['Player'];
+	
 	// Options
 	if($_SESSION['game']->Scores['Player'] < 21) echo "<br><a href='hit'>[Hit]</a>";
 	echo "<br><a href='stand'>[Stand]</a><br><a href='novojogo'>[New]</a>";
-	
+	echo '<button id="button"  data-role="button">Click on button</button>';
 	if($_SESSION['game']->GameEnd == 1)
 	echo "<br>Game Result: ".$_SESSION['game']->getResult();
 
